# pandia

./: .env.example  .git-blame-ignore-revs  .gitignore  .lintstagedrc.cjs  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/doc/: backup.rs  baseline.rs  detect.rs  diff.rs  document.rs  eager.rs  export.rs  grid_filter.rs  history.rs  jobs.rs  lazy.rs  mod.rs  ops.rs  repair.rs  schema.rs  schema_validate.rs  search.rs  store.rs  typegen.rs  types.rs
src/lib/constants/: index.ts
src/lib/data/: welcome.json
src/lib/ipc/: doc.ts  error.test.ts  error.ts  types.ts
src/lib/palette/: CommandPalette.svelte  match.test.ts  match.ts
src/lib/panels/: HistoryPanel.svelte  OutlinePanel.svelte  SchemaPanel.svelte  TypegenPanel.svelte  schema-keywords.ts
src/lib/services/: codegen.ts  diff.ts  file.ts  gist.ts  graph.ts  import.ts  json.ts  json2go.ts  jsonpath.ts  query.ts  repair.ts  snippet.ts  webhook.ts
src/lib/settings/: AppearancePanel.svelte  BehaviorPanel.svelte  DataPanel.svelte  LayoutPanel.svelte  SettingsView.svelte
src/lib/stores/: autosave.ts  database.ts  history.ts  preferences.ts  shortcuts.ts  tabs.ts  theme.ts  validation.ts
src/lib/ui/: ConfirmDialog.svelte  Dialog.svelte  Icon.svelte  NativeContextMenu.svelte  Popover.svelte  PromptDialog.svelte  SearchField.svelte  auto-scroll.test.ts  auto-scroll.ts  confirm.svelte.ts  dismissable.ts  focus.ts  prompt.svelte.ts  resizable.ts  sync-scroll.ts
src/lib/util/: clipboard.svelte.ts  escape.ts  flags.ts  format.ts  guards.ts  lossless.test.ts  lossless.ts  path.test.ts  path.ts  persist.ts  persisted-store.svelte.ts  reorder.test.ts  reorder.ts
src/lib/utils/: batch.ts  clipboard.ts  curl-parser.ts  dragdrop.ts  error.ts  http.ts  transform.ts  validation.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/sandbox/: +page.svelte
src/routes/settings/: +page.svelte
src/styles/: base.css  fonts.css  tokens.css  utilities.css
src/styles/components/: buttons.css  data.css  feedback.css  forms.css  menu.css  surfaces.css
src/types/: jmespath.d.ts  type-generators.d.ts
tests/benchmarks/: json-parsing.bench.ts  large-file-handling.bench.ts
tests/e2e/: file-operations.spec.ts  import-export.spec.ts  json-editing.spec.ts  tab-management.spec.ts
tests/e2e/fixtures/: sample-small.json
tests/mocks/: indexeddb.ts  tauri-dialog.ts  tauri-fs.ts  tauri-http.ts  tauri-store.ts  tauri.ts
tests/setup/: test-utils.ts  vitest.setup.ts
tests/unit/services/: json.test.ts  repair.test.ts
tests/unit/utils/: validation.test.ts
website/: astro.config.mjs  package-lock.json  package.json  vercel.json
website/public/: robots.txt  site.webmanifest
website/src/components/: CTA.astro  Download.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  InteractiveDemo.astro  MiniGraphVisualizer.astro  Navigation.astro
website/src/data/: converters.ts  faq.ts  releases.ts  seo.ts  site.ts
website/src/layouts/: DocsLayout.astro  LandingLayout.astro  Layout.astro
website/src/pages/: 404.astro  changelog.astro  (+12 more)
(+182 files in other folders)
