[package]
name = "pandia"
version = "0.1.0"
description = "A powerful cross-platform desktop JSON IDE"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["devtools"] }
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.4"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "Pandia"
path = "src/main.rs"

[lib]
name = "pandia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
