[package]
name = "pandia"
version = "1.0.1"
description = "A powerful cross-platform desktop JSON IDE"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["devtools"] }
tauri-plugin-fs = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.4"
tauri-plugin-http = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision"] }
tokio = { version = "1", features = ["full"] }

sonic-rs = "0.5"
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
regex = "1"
once_cell = "1"
jsonschema = { version = "0.30", default-features = false }
serde_yaml_ng = "0.10"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1"

serde-transcode = "1.1"
blake3 = "1"

[[bin]]
name = "Pandia"
path = "src/main.rs"

[lib]
name = "pandia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
